--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "tonpm": "npm run build && npm version patch && npm publish",
     "test": "karma start",
     "docs:build": "vuepress build docs",
-    "docs:dev": "vuepress dev docs"
+    "docs:dev": "vuepress dev docs",
+    "docs:pro":"sh deploy.sh"
   },
   "main": "dist/cvs.js",
   "keywords": [
