--- a/docs/package.json
+++ b/docs/package.json
@@ -1,15 +1,14 @@
 {
   "name": "cvs-docs",
-  "version": "1.0.0",
-  "description": "--- home: true # heroImage: /hero.png actionText: 快速上手 → actionLink: /src/index/ features: - title: 简洁至上   details: 以 Markdown 为中心的项目结构，以最少的配置帮助你专注于写作。 - title: Vue驱动   details: 享受 Vue + webpack 的开发体验，在 Markdown 中使用 Vue 组件，同时可以使用 Vue 来开发自定义主题。 - title: 高性能   details: 总而言之就是高性能 footer: MIT Licensed | Copyright © 2018-present Evan You ---",
+  "version": "0.1.7",
+  "description": "A basic canvas framework for 2d drawing.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Hanger",
+  "license": "MIT",
   "dependencies": {
-    "cvs": "^0.1.6",
-    "vuepress": "^0.14.2"
+    "cvs": "^0.1.7"
   }
 }
