--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "annotate-webpack-plugin": "^0.1.1",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.2",
     "babel-plugin-istanbul": "^2.0.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -43,6 +44,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.15.0",
+    "eslint-config-alloy": "^1.4.2",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
