--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,8 @@
 {
   "presets": [
-    ["env", {
-      "modules": "commonjs",
-      "targets": {
-        "node": "current"
-      }
-    }]
+    "es2017"
+  ],
+  "plugins":[
+    "transform-decorators-legacy"
   ]
 }
