--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.2",
     "babel-plugin-istanbul": "^2.0.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "compression-webpack-plugin": "^1.1.11",
     "copy-webpack-plugin": "^4.0.1",
@@ -65,8 +67,6 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
-    "ts-loader": "3.5.0",
-    "typescript": "2.9.2",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "3.6.0",
     "webpack-dev-server": "2.11.1"
