--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
   },
   "devDependencies": {
     "annotate-webpack-plugin": "^0.1.1",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.2",
     "babel-plugin-istanbul": "^2.0.1",
+    "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
@@ -70,5 +71,8 @@
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "3.6.0",
     "webpack-dev-server": "2.11.1"
+  },
+  "dependencies": {
+    "babel-plugin-transform-decorators": "^6.24.1"
   }
 }
