feat: v0.3.0 - 引入 Scene 和 Layer 构造器

--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,9 @@
 {
-  "plugins": ["transform-decorators-legacy"],
-  "presets": [
-    ["env", {
-      "modules": "commonjs",
-      "targets": {
-        "node": "current"
-      }
-    }]
+  "presets": ["env"],
+  "plugins": [
+    "transform-runtime",
+    "transform-decorators-runtime",
+    "transform-class-properties",
+    "inline-package-json"
   ]
 }
