--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,16 @@
 {
-  "presets": ["env"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+        }
+      }
+    ]
+  ],
   "plugins": [
-    "transform-runtime",
-    "transform-decorators-runtime",
-    "transform-class-properties",
-    "inline-package-json"
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose" : true }]
   ]
 }
