--- a/.babelrc
+++ b/.babelrc
@@ -2,8 +2,6 @@
   "presets": ["env"],
   "plugins": [
     "transform-runtime",
-    "transform-decorators-runtime",
-    "transform-class-properties",
-    "inline-package-json"
+    "transform-decorators-legacy"
   ]
 }
