--- a/package.json
+++ b/package.json
@@ -68,5 +68,8 @@
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "3.6.0",
     "webpack-dev-server": "2.11.1"
+  },
+  "dependencies": {
+    "color-string": "^1.5.3"
   }
 }
