--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   },
   "dependencies": {
     "bezier-easing": "^2.0.3",
-    "color-string": "^1.5.3"
+    "color-string": "^1.5.3",
+    "svg-path-to-canvas": "^1.9.6"
   }
 }
