--- a/package.json
+++ b/package.json
@@ -71,6 +71,6 @@
   "dependencies": {
     "bezier-easing": "^2.0.3",
     "color-string": "^1.5.3",
-    "svg-path-to-canvas": "^1.9.6"
+    "point-at-length": "^1.1.0"
   }
 }
